--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 08 19:13:08 TRT 2025
-sdk.dir=C\:\\Users\\bugra\\AppData\\Local\\Android\\Sdk
+#Thu Jan 09 00:20:09 TRT 2025
+sdk.dir=C\:\\Users\\batuh\\AppData\\Local\\Android\\Sdk
