--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,15 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
+}
+
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
 }
 
 android {
@@ -17,6 +26,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BOOKS_API_KEY", "\"${localProperties['BOOKS_API_KEY'] ?: ""}\""
     }
 
     buildTypes {
@@ -34,20 +44,21 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
+        kotlinCompilerExtensionVersion '1.5.6'
     }
     kapt {
         correctErrorTypes true
-        javacOptions {
-            option("-source", "17")
-            option("-target", "17")
+        arguments {
+            arg("room.schemaLocation", "$projectDir/schemas")
         }
     }
 }
 
 dependencies {
+    implementation 'com.google.android.libraries.places:places:4.1.0'
     def composeBom = platform('androidx.compose:compose-bom:2024.02.00')
     implementation composeBom
     androidTestImplementation composeBom
@@ -77,4 +88,34 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:32.7.2')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.7.0"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
+
+    // Material Design
+    implementation "androidx.compose.material:material:1.6.1"
+    implementation "androidx.compose.material3:material3:1.2.0"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0"
+    
+    // Pull to refresh
+    implementation "androidx.compose.material3:material3-pullrefresh:1.2.0"
+    
+    // Icons
+    implementation "androidx.compose.material:material-icons-core:1.6.1"
+    implementation "androidx.compose.material:material-icons-extended:1.6.1"
+
+    // Accompanist (updated version)
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.34.0"
 } 
