--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,17 @@
 buildscript {
+    ext {
+        kotlin_version = '1.9.21'
+        agp_version = '8.3.2'
+    }
+    
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.48'
+        classpath 'com.google.gms:google-services:4.4.1'
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.2.2' apply false
-    id 'com.android.library' version '8.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.android.application' version "$agp_version" apply false
+    id 'com.android.library' version "$agp_version" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 } 
